# goit-ds-hw-01

dtsml_modul1_poetry/: dockerfile  hw1_from_core_with_poetry.py  pyproject.toml
