[project]
name = "dtsml-modul1-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Yehor Davydov",email = "yehordavydov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "dtsml_modul1_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
